--- a/1/1.html
+++ b/1/1.html
@@ -15,7 +15,7 @@
 <body>
 
 <h1>Gift Wrapping Calculator</h1>
-<p>Pradiniai duomenys skaitomi iš failo 'gifts.json' </p>
+<p>Pradiniai duomenys skaitomi iš failo 'gifts.json'. Reikalingas HTTP protokolas. </p>
 <div id="giftsTable"></div>
 
 <script >
