--- a/10/10.html
+++ b/10/10.html
@@ -19,7 +19,7 @@
     }
   </style>    
     </head>
-
+    <header>
     <h1>Christmas Lights Clicker</h1>
     </header>  
       <section class="container">       
