--- a/1/1.html
+++ b/1/1.html
@@ -45,7 +45,7 @@
         {   
            
             if(verifyJson(json)!=true){
-                text="Neteisingas failo formatas";
+                text="Neteisingas failo formatas. Hello World";
             }            
             else{
                 json=JSON.parse(json);
